--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <form action='/about' method='get'>
     <textarea name='text' style='margin: 0px; width: 721px; height: 93px;'></textarea><br>
 
-    <input type="checkbox" name="removepunc"> Remove Punctuations<br>
+    <input type="checkbox" name="removepunc"> Remove Punctuations(suman)<br>
     <button type='submit'> Analyze Text</button>
 
 </form>
